{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 49,
  "lineage": "85ded47a-2145-d3d0-f7ff-9bc537cf1dfd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "webapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795939032463:loadbalancer/app/tf-lb-20211112085400225700000002/3a3049e161ae1f96",
            "arn_suffix": "app/tf-lb-20211112085400225700000002/3a3049e161ae1f96",
            "dns_name": "tf-lb-20211112085400225700000002-1329080102.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:795939032463:loadbalancer/app/tf-lb-20211112085400225700000002/3a3049e161ae1f96",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20211112085400225700000002",
            "security_groups": [
              "sg-03c95b8d51e1228f0",
              "sg-0951c13e9e9bb8a8c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-037e4daf4d4c7fc08"
              },
              {
                "subnet_id": "subnet-0e439d8dd8f30a286"
              }
            ],
            "subnets": [
              "subnet-037e4daf4d4c7fc08",
              "subnet-0e439d8dd8f30a286"
            ],
            "vpc_id": "vpc-021c9d0c3e4301e1d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.webapp_http_inbound_sg",
            "aws_security_group.webapp_https_inbound_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "webapp_elb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795939032463:listener/app/tf-lb-20211112085400225700000002/3a3049e161ae1f96/45fe7b3e2c3c2c08",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:795939032463:listener/app/tf-lb-20211112085400225700000002/3a3049e161ae1f96/45fe7b3e2c3c2c08",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:795939032463:loadbalancer/app/tf-lb-20211112085400225700000002/3a3049e161ae1f96",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.webapp_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "webapp_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795939032463:targetgroup/no-ssl-demo-lb-target-group/4bdb76862b9508be",
            "arn_suffix": "targetgroup/no-ssl-demo-lb-target-group/4bdb76862b9508be",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:795939032463:targetgroup/no-ssl-demo-lb-target-group/4bdb76862b9508be",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "no-ssl-demo-lb-target-group",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "target_type": "instance",
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end-ssl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795939032463:listener/app/tf-lb-20211112085400225700000002/3a3049e161ae1f96/c5ecce9a822c20b2",
            "certificate_arn": "arn:aws:acm:us-east-1:795939032463:certificate/701bafa3-47d5-4077-a03c-8524972262a1",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:795939032463:targetgroup/no-ssl-demo-lb-target-group/4bdb76862b9508be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:795939032463:listener/app/tf-lb-20211112085400225700000002/3a3049e161ae1f96/c5ecce9a822c20b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:795939032463:loadbalancer/app/tf-lb-20211112085400225700000002/3a3049e161ae1f96",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.myapp",
            "aws_alb.webapp_alb",
            "aws_alb_target_group.webapp_alb_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:security-group/sg-0007d4ac3d91d6baa",
            "description": "Allow inbound from web tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0007d4ac3d91d6baa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0951c13e9e9bb8a8c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "demo_rds_inbound",
            "name_prefix": "",
            "owner_id": "795939032463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo_rds_inbound"
            },
            "tags_all": {
              "Name": "demo_rds_inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webapp_http_inbound_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp_http_inbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:security-group/sg-0951c13e9e9bb8a8c",
            "description": "Allow HTTP from Anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0951c13e9e9bb8a8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo_webapp_http_inbound",
            "name_prefix": "",
            "owner_id": "795939032463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_demo_webapp_http_inbound"
            },
            "tags_all": {
              "Name": "terraform_demo_webapp_http_inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp_https_inbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:security-group/sg-03c95b8d51e1228f0",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c95b8d51e1228f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "795939032463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_demo_webapp_https_inbound",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "terraform_demo_webapp_https_inbound",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp_ssh_inbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:security-group/sg-00a17f268f7858a91",
            "description": "Allow SSH from certain ranges",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a17f268f7858a91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo_webapp_ssh_inbound",
            "name_prefix": "",
            "owner_id": "795939032463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_demo_webapp_ssh_inbound",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "terraform_demo_webapp_ssh_inbound",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:internet-gateway/igw-0e0b733067d28db6f",
            "id": "igw-0e0b733067d28db6f",
            "owner_id": "795939032463",
            "tags": {
              "Name": "demo-project-no-ssl}",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-no-ssl}",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e0b733067d28db6f",
            "id": "r-rtb-039d46dcbbeb6dd181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039d46dcbbeb6dd18",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:route-table/rtb-00396f9e39614debe",
            "id": "rtb-00396f9e39614debe",
            "owner_id": "795939032463",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-project-no-ssl}-private-us-east-1a",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-no-ssl}-private-us-east-1a",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:route-table/rtb-01a2cb4fa1ba218ee",
            "id": "rtb-01a2cb4fa1ba218ee",
            "owner_id": "795939032463",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-project-no-ssl}-private-us-east-1b",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-no-ssl}-private-us-east-1b",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:route-table/rtb-039d46dcbbeb6dd18",
            "id": "rtb-039d46dcbbeb6dd18",
            "owner_id": "795939032463",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0b733067d28db6f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-project-no-ssl}-public",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-no-ssl}-public",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9e1d1f34281b461",
            "route_table_id": "rtb-00396f9e39614debe",
            "subnet_id": "subnet-06ad66400f80dc930"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1de557bfe5afbc9",
            "route_table_id": "rtb-01a2cb4fa1ba218ee",
            "subnet_id": "subnet-0f3547336f41ddf20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed2cdd499c6bc839",
            "route_table_id": "rtb-039d46dcbbeb6dd18",
            "subnet_id": "subnet-0e439d8dd8f30a286"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee7cb07d7e7e517a",
            "route_table_id": "rtb-039d46dcbbeb6dd18",
            "subnet_id": "subnet-037e4daf4d4c7fc08"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:subnet/subnet-06ad66400f80dc930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06ad66400f80dc930",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "795939032463",
            "tags": {
              "Name": "demo-project-no-ssl}-private-us-east-1a",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-no-ssl}-private-us-east-1a",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:subnet/subnet-0f3547336f41ddf20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0f3547336f41ddf20",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "795939032463",
            "tags": {
              "Name": "demo-project-no-ssl}-private-us-east-1b",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-no-ssl}-private-us-east-1b",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:subnet/subnet-0e439d8dd8f30a286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e439d8dd8f30a286",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795939032463",
            "tags": {
              "Name": "demo-project-no-ssl}-public-us-east-1a",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-no-ssl}-public-us-east-1a",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:subnet/subnet-037e4daf4d4c7fc08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-037e4daf4d4c7fc08",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795939032463",
            "tags": {
              "Name": "demo-project-no-ssl}-public-us-east-1b",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-no-ssl}-public-us-east-1b",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-021c9d0c3e4301e1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795939032463:vpc/vpc-021c9d0c3e4301e1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a504cdb264d16c4",
            "default_route_table_id": "rtb-01bf45f7b3a971d36",
            "default_security_group_id": "sg-0ef270bfd67f91594",
            "dhcp_options_id": "dopt-09cd59fb91d3442a4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-021c9d0c3e4301e1d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01bf45f7b3a971d36",
            "owner_id": "795939032463",
            "tags": {
              "Name": "demo-project-no-ssl}",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-no-ssl}",
              "environment": "no-ssl",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}